<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>

    <string name="name">name</string>
    <string name="age">age</string>
    <string name="start_other_activity_button">Start other activity</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="result">Result</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="factorial">FACT</string>

    <string name="pick_date">PICK A DATE!</string>

</resources>
